policy-engine-enforcer/rego_side_car_policies/_for_azure/gkeeper/k8s-deny-loadbalancer.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenylbservices
spec:
  crd:
    spec:
      names:
        kind: K8sDenyLoadBalancer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenylbservices

        deny[msg] {
          input.review.object.kind == "Service"
          input.review.object.spec.type == "LoadBalancer"
          msg := "Service type LoadBalancer is not allowed in this environment."
        }
