policy-engine-enforcer/rego_side_car_policies/_for_azure/gkeeper/k8s-enforce-runasnonroot.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8senforcerunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sEnforceRunAsNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8senforcerunasnonroot

        deny[msg] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container '%s' must have runAsNonRoot: true", [container.name])
        }
